# AndroidJavaApp

./: README.md  build.gradle  local.properties  settings.gradle
OcrPaddle/: .gitignore  build.gradle
OcrPaddle/src/androidTest/java/com/aml/ocr/paddle/: ExampleInstrumentedTest.java
OcrPaddle/src/main/: AndroidManifest.xml
OcrPaddle/src/main/cpp/: CMakeLists.txt  det_process.cc  log.h  paddle.cpp
OcrPaddle/src/main/cpp/utils/: common.h  jni_tools.h
OcrPaddle/src/main/java/com/aml/ocr/paddle/: MainActivity.java
OcrPaddle/src/main/java/com/aml/ocr/paddle/jni/: Native.java
OcrPaddle/src/main/java/com/aml/ocr/paddle/utils/: CommonUtils.java
OcrPaddle/src/main/res/layout/: activity_main.xml
OcrPaddle/src/main/res/values/: themes.xml
OcrPaddle/src/test/java/com/aml/ocr/paddle/: ExampleUnitTest.java
app/: build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/myapp/: MainActivity.java  RetrofitTestActivity.java
app/src/main/java/com/example/myapp/enity/: Person.java
app/src/main/java/com/example/myapp/net/: ApiService.java
app/src/main/java/com/example/myapp/net/data/: BaseResponse.java
app/src/main/java/com/example/myapp/net/engin1/: NetWorkEngin.java
app/src/main/java/com/example/myapp/presenter/: RetrofitTestPresenter.java
app/src/main/java/com/example/myapp/rxjava3/: RxJavaRecord.java  RxUtils.java
app/src/main/java/com/example/myapp/utils/: LogUtils.java
app/src/main/res/layout/: activity_main.xml  activity_retrofit_test.xml
gradle/wrapper/: gradle-wrapper.properties
(+2 files in other folders)
